# ruproxy

./: Cargo.toml  README.md  USAGE.md  config.json  test-config.json
.github/workflows/: release.yml  rust.yml
benches/: routing_bench.rs
doc/: README.md  architecture.md  cli.md  config.md  protocols.md  quickstart.md
doc/examples/: config-minimal.json  config-shadowsocks.json
scripts/: run.ps1  setup.ps1
src/: common.rs  config.rs  config_singbox.rs  core.rs  lib.rs  main.rs
src/features/: inbound.rs  mod.rs  outbound.rs  routing.rs
src/protocols/: direct.rs  http.rs  https.rs  mod.rs  shadowsocks.rs  socks.rs  tcp_forward.rs  tls_outbound.rs
src/transport/: mod.rs  tcp.rs  tls.rs  websocket.rs
