[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"
authors = ["Rust Core Team"]
description = "High-performance proxy core written in Rust, inspired by Xray-core"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.0"
parking_lot = "0.12"
bytes = "1.0"
futures = "0.3"
pin-project = "1.0"
once_cell = "1.0"
arc-swap = "1.0"
smallvec = "1.0"
ahash = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
ring = "0.16"
base64 = "0.21"
url = "2.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
ipnet = "2.0"
socket2 = "0.5"
tokio-tungstenite = "0.20"
tokio-rustls = "0.24"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "routing_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true